# django_decoupled

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
scripts/: entrypoint.sh  excel_generator.py
src/django_decoupled/application/: __init__.py  commands.py  dtos.py  handlers.py  interfaces.py  services.py  validators.py
src/django_decoupled/controllers/: __init__.py
src/django_decoupled/controllers/apps/: __init__.py
src/django_decoupled/controllers/apps/users/: __init__.py  apps.py  forms.py  urls.py  views.py
src/django_decoupled/controllers/apps/workspaces/: __init__.py  admin.py  forms.py  urls.py  views.py
src/django_decoupled/controllers/config/: urls.py
src/django_decoupled/controllers/services/: file_readers.py
src/django_decoupled/controllers/settings/: __init__.py  base.py  local.py  prod.py
src/django_decoupled/controllers/staticfiles/users/: main.css
src/django_decoupled/controllers/templates/: base.html
src/django_decoupled/controllers/templates/account/: base.html
src/django_decoupled/domain/: exceptions.py  models.py
src/django_decoupled/domain/exceptions/: __init__.py  users.py  workspaces.py
src/django_decoupled/domain/models/: users.py  workspaces.py
src/django_decoupled/infrastructure/data_transformation/: processors.py
src/django_decoupled/infrastructure/persistence/: __init__.py
src/django_decoupled/infrastructure/requestor/: __init__.py  executors.py
src/django_layered/: __init__.py
src/django_layered/application/: dtos.py  exceptions.py  handlers.py  services.py
src/django_layered/controllers/: manage.py
src/django_layered/controllers/apps/users/: apps.py  (+1 more)
src/django_layered/controllers/config/: __init__.py  asgi.py  wsgi.py
src/django_layered/controllers/settings/: staging.py  test.py
src/django_layered/controllers/static/: corpus-massive-es.csv  corpus-massive-es.xlsx
src/django_layered/dependency_injection/: __init__.py  containers.py  dispatcher.py  expections.py
src/django_layered/domain/: __init__.py
src/django_layered/infrastructure/: __init__.py
(+59 files in other folders)
